--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
            <option>المغرب </option>
             <option>امريكا </option>
              <option>فرنسا و اليابان</option> <option>كوريا</option>
-       </select>
+  </select>
+           <input type="file" name="attachment" accept="image/png, image/jpeg, image/gif">
        <button tpye="submit" id="a">نشر</button>
    </form>
    <p>انت تقوم بارسال هذه معومات إلى يوسف لكي يكتبها على القائمة</p>
