--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <option>امريكا </option>
              <option>فرنسا و اليابان</option> <option>كوريا</option>
   </select>
-           <input type="file" name="attachment" accept="image/png, image/jpeg, image/gif">
+        <labet>رابط صورة</labet>  <input type="url" name="url">
        <button tpye="submit" id="a">نشر</button>
    </form>
    <p>انت تقوم بارسال هذه معومات إلى يوسف لكي يكتبها على القائمة</p>
